--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -20,8 +20,8 @@
     }
 
     a:not(.no-styling) {
-        @apply relative bg-none link font-medium text-[var(--primary)]
-        /* @apply relative bg-none font-medium text-[var(--primary)] */
+        /* @apply relative bg-none link font-medium text-[var(--primary)] */
+        @apply relative bg-none font-medium text-[var(--primary)]
         underline decoration-[var(--link-underline)] decoration-1 decoration-dashed underline-offset-4;
         box-decoration-break: clone;
         -webkit-box-decoration-break: clone;
@@ -60,10 +60,16 @@
         }
     }
 
-    .copy-btn {
+    /* .copy-btn {
         all: initial;
         @apply btn-regular-dark opacity-0 shadow-lg shadow-black/50 absolute active:scale-90 h-8 w-8 top-3 right-3 text-sm rounded-lg transition-all ease-in-out z-20 cursor-pointer;
+    } */
+
+    .copy-btn {
+        all: initial;
+        @apply bg-gray-800 text-white opacity-0 shadow-lg shadow-black/50 absolute active:scale-90 h-8 w-8 top-3 right-3 text-sm rounded-lg transition-all ease-in-out z-20 cursor-pointer;
     }
+    
     .frame:hover .copy-btn {
         opacity: 1;
     }
