--- a/src/components/misc/ImageWrapper.astro
+++ b/src/components/misc/ImageWrapper.astro
@@ -36,12 +36,12 @@ if (isLocal) {
 		.normalize(path.join("../../", basePath, src))
 		.replace(/\\/g, "/");
 	const file = files[normalizedPath];
-	// if (!file) {
-	// 	console.error(
-	// 		`\n[ERROR] Image file not found: ${normalizedPath.replace("../../", "src/")}`,
-	// 	);
-	// }
-	// img = await file();
+	if (!file) {
+		console.error(
+			`\n[ERROR] Image file not found: ${normalizedPath.replace("../../", "src/")}`,
+		);
+	}
+	img = await file();
 }
 
 const imageClass = "w-full h-full object-cover";
